kubernetes/manifests/platform/22-renovate.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: renovate
  annotations:
    argocd.argoproj.io/sync-wave: "22"
